<resources>
    <string name="app_name">禧世通</string>
    <string name="mine">我的</string>
    <string name="privilege">特权</string>
    <string name="specialsale">特卖</string>
    <string name="welcome_login">欢迎登陆</string>
    <string name="login_title">禧世通</string>
    <string name="login_notice">注：不支持虚拟运营商和携号转网的号码注册登录-用户端</string>
    <string name="login_second_title">禧世通-用户端</string>
    <string name="login_agreement">未注册的手机号验证后自动生成 禧世通 帐号</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="sended_message">短信验证码已发送到</string>
    <string name="vertification_code_error">验证码错误</string>
    <string name="time">重新发送59s</string>
    <string name="my_order">我的订单</string>
    <string name="processing_order">处理中订单</string>
    <string name="completed_roder">已完成订单</string>
    <string name="fail_order">失败订单</string>
    <string name="all_order">全部订单</string>
    <string name="to_apply">去申请</string>
    <string name="apply_invoice">申请开票</string>
    <string name="details_of_membership">会费明细</string>
    <string name="see">查看</string>
    <string name="my_address">我的地址</string>
    <string name="manage_address">管理地址</string>
    <string name="rule">
        <u>规则说明</u>>
    </string>
    <string name="integral">积分(个)</string>
    <string name="vip">会员卡</string>
    <string name="xishitong_vip">禧世通</string>
    <string name="logout">退出登录</string>
    <string name="please_input_phonenumber">请输入手机号码</string>
    <string name="apply_for_membership">申请入会</string>
    <string name="pay_membership">会费缴纳</string>
    <string name="apply_invoice_notice">提示：仅支持顺丰快递到付，3个工作日内开票</string>
    <string name="order_number">订单编号</string>
    <string name="invoice_type">发票类型</string>
    <string name="normal_invoice">普通发票</string>
    <string name="submit">提交</string>
    <string name="receiving_address">收货地址</string>
    <string name="receiver">收件人</string>
    <string name="input_receiver_name">请输入收件人姓名</string>
    <string name="phone">联系电话</string>
    <string name="input_receiver_phone">请输入收件人联系电话</string>
    <string name="location">所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="input_detail_address">请输入详细地址</string>
    <string name="add_address">新增地址</string>
    <string name="modify_address">修改地址</string>
    <string name="delete">删除</string>
    <string name="recommend">精品推荐</string>
    <string name="recharge">优惠充值</string>
    <string name="shopping">购物优惠</string>
    <string name="ticket">生活卡券</string>
    <string name="check_voucher">查看凭证</string>
    <string name="cancle">取消</string>
    <string name="agreement">欢迎使用“禧世通”！我们非常重视您的个人信息和隐私保护。在您使用“禧世通”服务之前，请仔细阅读《禧世通隐私政策》和《禧世通用户协议》，我们将严格按照经您同意的各项条款使用您的个人信息，以便为您提供更好的服务。\n\n如您同意此政策和协议，请点击"同意"并开始使用我们的产品和服务。我们尽力保护您的个人信息安全</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="refresh">刷新</string>
</resources>
