<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">
    <include layout="@layout/common_toolbar"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15.5dp"
                    android:text="@string/receiver"
                    android:textColor="@color/color_999999"
                    android:textSize="15sp"/>
            <EditText
                    android:id="@+id/et_addr_receiver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="114.5dp"
                    android:background="@null"
                    android:hint="@string/input_receiver_name"
                    android:textColorHint="@color/color_CCCCCC"/>
        </RelativeLayout>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:background="@color/color_EEEEEE"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15.5dp"
                    android:text="@string/phone"
                    android:textColor="@color/color_999999"
                    android:textSize="15sp"/>
            <EditText
                    android:id="@+id/et_addr_receiver_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="114.5dp"
                    android:background="@null"
                    android:hint="@string/input_receiver_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColorHint="@color/color_CCCCCC"/>
        </RelativeLayout>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:background="@color/color_EEEEEE"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15.5dp"
                    android:text="@string/location"
                    android:textColor="@color/color_999999"
                    android:textSize="15sp"/>
            <EditText
                    android:id="@+id/et_home_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="114.5dp"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/location"
                    android:textColorHint="@color/color_CCCCCC"/>
        </RelativeLayout>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:background="@color/color_EEEEEE"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15.5dp"
                    android:gravity="center"
                    android:text="@string/detail_address"
                    android:textColor="@color/color_999999"
                    android:textSize="15sp"/>
            <EditText
                    android:id="@+id/et_addr_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="114.5dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/input_detail_address"
                    android:textColorHint="@color/color_CCCCCC"/>
        </RelativeLayout>

        <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_login_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_delete_bg"
                android:text="@string/delete"
                android:textColor="@color/color_999999"
                android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>