<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
    <include layout="@layout/common_toolbar"/>

    <TextView
            android:id="@+id/tv_welcome_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_login"
            android:textColor="@color/color_262626"
            android:textSize="25sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/tv_login_2title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/login_second_title"
            android:textColor="@color/color_333333"
            android:textSize="15sp"/>

    <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/tv_login_2title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="63dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="63dp"
            android:background="@drawable/login_et_bg"
            android:hint="@string/please_input_phonenumber"
            android:inputType="number"
            android:maxLength="11"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/color_262626"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="20sp"/>


    <TextView
            android:id="@+id/tv_login_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/login_agreement"
            android:textColor="@color/color_262626"
            android:textSize="12sp"/>
    <Button
            android:id="@+id/btn_login"
            android:layout_below="@+id/tv_login_agreement"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29.5dp"
            android:layout_width="179dp"
            android:layout_height="44dp"
            android:background="@drawable/btn_login_bg"
            android:text="发送短信验证码"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="29.5dp"
            android:text="@string/login_notice"
            android:textColor="@color/color_999999"
            android:textSize="12sp"/>
</RelativeLayout>