<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:background="@color/color_6BB467">
            <FrameLayout android:layout_width="320dp"
                         android:layout_height="175dp"
                         android:layout_gravity="center"
                         android:orientation="vertical">
                <RelativeLayout
                        android:layout_width="320dp"
                        android:layout_height="175dp"
                        android:layout_gravity="center"
                        android:background="@mipmap/mine_card_bg"
                        android:orientation="vertical">
                    <RelativeLayout
                            android:id="@+id/rl_avatar"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="14.5dp">
                        <ImageView
                                android:id="@+id/iv_avatar"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="12dp"
                                android:src="@mipmap/avadar"
                                tools:ignore="ContentDescription"/>
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="4.5dp"
                                android:layout_toEndOf="@+id/iv_avatar"
                                android:orientation="vertical">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/xishitong_vip"
                                    android:textColor="@color/color_111111"
                                    android:textSize="14sp"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/vip"
                                    android:textColor="@color/color_111111"
                                    android:textSize="14sp"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/rl_avatar"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10.5dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/integral"
                                android:textColor="@color/color_333333"
                                android:textSize="12sp"/>
                        <TextView
                                android:id="@+id/tv_integral"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/color_F86024"
                                android:textSize="27sp"/>
                    </LinearLayout>
                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="11.5dp">
                        <TextView
                                android:id="@+id/tv_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:padding="10dp"
                                android:text=""
                                android:textColor="@color/color_111111"
                                android:textSize="12sp"/>
                        <TextView
                                android:id="@+id/tv_rule"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="10dp"
                                android:padding="10dp"
                                android:text="@string/rule"
                                android:textColor="@color/color_6BB467"
                                android:textSize="12sp"
                                tools:ignore="RelativeOverlap"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                        android:id="@+id/tv_vip_recharge"
                        android:layout_width="63dp"
                        android:layout_height="27dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="7.5dp"
                        android:background="@mipmap/recharge_bg"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:paddingStart="8dp"
                        android:text="@string/apply_for_membership"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
            </FrameLayout>

        </FrameLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15.5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/my_order"
                    android:textColor="@color/color_292D33"
                    android:textSize="15sp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/color_EEEEEE"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">
                <LinearLayout
                        android:id="@+id/processing_order"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UnusedAttribute,UseCompoundDrawables">
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@mipmap/processing_order"
                            tools:ignore="ContentDescription"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="9.5dp"
                              android:text="@string/processing_order"
                              android:textColor="@color/color_333333"
                              android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/completed_order"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UnusedAttribute,UseCompoundDrawables">
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@mipmap/completed_order"
                            tools:ignore="ContentDescription"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="9.5dp"
                              android:text="@string/completed_roder"
                              android:textColor="@color/color_333333"
                              android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/fail_order"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UnusedAttribute,UseCompoundDrawables">
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@mipmap/fail_order"
                            tools:ignore="ContentDescription"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="9.5dp"
                              android:text="@string/fail_order"
                              android:textColor="@color/color_333333"
                              android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/all_order"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UnusedAttribute,UseCompoundDrawables">
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@mipmap/all_order"
                            tools:ignore="ContentDescription"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="9.5dp"
                              android:text="@string/all_order"
                              android:textColor="@color/color_333333"
                              android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">
            <RelativeLayout
                    android:id="@+id/apply_invoice"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?attr/selectableItemBackground"
                    tools:ignore="UnusedAttribute">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16.5dp"
                        android:text="@string/apply_invoice"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="9dp"
                        android:drawableEnd="@mipmap/go"
                        android:text="@string/to_apply"
                        android:textColor="@color/color_999999"
                        android:textSize="15sp"
                        tools:ignore="RelativeOverlap"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16.5dp"
                    android:layout_marginEnd="16.5dp"
                    android:background="@color/color_EEEEEE"/>
            <RelativeLayout
                    android:id="@+id/details_of_membership"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?attr/selectableItemBackground"
                    tools:ignore="UnusedAttribute">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16.5dp"
                        android:text="@string/details_of_membership"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="9dp"
                        android:drawableEnd="@mipmap/go"
                        android:text="@string/see"
                        android:textColor="@color/color_999999"
                        android:textSize="15sp"
                        tools:ignore="RelativeOverlap"/>
            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16.5dp"
                    android:layout_marginEnd="16.5dp"
                    android:background="@color/color_EEEEEE"/>
            <RelativeLayout
                    android:id="@+id/my_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?attr/selectableItemBackground"
                    tools:ignore="UnusedAttribute">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16.5dp"
                        android:text="@string/my_address"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="9dp"
                        android:drawableEnd="@mipmap/go"
                        android:text="@string/manage_address"
                        android:textColor="@color/color_999999"
                        android:textSize="15sp"
                        tools:ignore="RelativeOverlap"/>
            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:foreground="?attr/selectableItemBackground">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/color_F65333"
                    android:textSize="15sp"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>