<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal">


        <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="禧世通协议"
                android:textColor="@color/color_222222"
                android:textSize="17sp"
                android:layout_marginTop="22dp"/>


        <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/agreement"
                android:textColor="@color/color_666666"
                android:textSize="13sp"
                android:layout_marginTop="29dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btn_disagree"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="44dp"
                    android:text="@string/disagree"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="33dp"
                    android:background="@drawable/btn_delete_bg"
                    android:textColor="@color/color_999999"
                    android:layout_marginEnd="7dp"
                    style="?attr/buttonBarButtonStyle"
                    android:textSize="16sp"/>
            <Button
                    android:id="@+id/btn_agree"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="44dp"
                    android:text="@string/agree"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="33dp"
                    android:background="@drawable/btn_login_bg"
                    android:textColor="@color/white"
                    style="?attr/buttonBarButtonStyle"
                    android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>